namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: es
---
kind: Namespace
apiVersion: v1
metadata:
  name: kibana
